[tool.poetry]
name = "pytools"
version = "0.1.0"
description = "Common Python utilities and libraries for web apps"
authors = ["Amir Kavousians <ak@amirkav.com>"]
repository = "https://github.com/coinlist/custody-py-tools"
readme = "README.md"
license = "MIT License"
classifiers = [
    "Intended Audience :: Developers",
    "Environment :: Console",
    "License :: Other/Proprietary License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
]
[tool.poetry.group.dev.dependencies]
black = { version = "^22.10.0", allow-prereleases = true }


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "3.11"
docker = "*"
pg8000 = ">=1.16.6"
psycopg2-binary = "*"
pymysql = "*"
pytz = "*"
fuzzywuzzy = "*"
boto3 = "^1.26.17"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "7.*.*"
# moto = { version = "3.*.*", extras = ["cognitoidp"] }
pytest-lazy-fixture = "*"
callee = "*"
freezegun = "~=1.1"
mypy = "*"
